[fix]#8903 allow filters on small devices

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -323,7 +323,7 @@
 
 
 @media screen and (max-width: $small-mobile){
-	.drop-down-filters, .filters{
+	.drop-down-filters{
 		display: none !important;
 	}
 
